# jade

./: .gitlab-ci.yml  Cargo.toml  PKGBUILD  README.md  example_config.json  flake.nix
src/: args.rs  logging.rs  main.rs  mods.rs
src/functions/: base.rs  desktops.rs  locale.rs  mod.rs  network.rs  partition.rs  unakite.rs  users.rs
src/installer/: desktops.rs  mod.rs  network.rs  partition.rs  users.rs
src/internal/: config.rs  exec.rs  files.rs  install.rs  mod.rs  returncode_eval.rs  strings.rs
src/mods/: ws.rs
