[package]
name = "jade"
description = "The new installer for crystal linux, contains backend and TUI"
authors = ["Amy <axtlos@tar.black>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"