[package]
name = "jade"
description = "The new installer for crystal linux, contains backend and TUI"
authors = ["Amy <axtlos@tar.black>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.10", features = ["derive"] }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = [ "derive" ] }
log = "0.4.16"
flexi_logger = {version = "0.22.3", features = ["colors"] }
lazy_static = "1.4.0"